# kaantor

./: .gitignore  Cargo.toml  README.md  cvg.cmd  kaantor.sln
.github/workflows/: main.yml
examples/tree/: Cargo.toml
examples/tree/src/: main.rs
kaantor/: Cargo.toml
kaantor-derive/: Cargo.toml
kaantor-derive/examples/: derive.rs  test.rs
kaantor-derive/src/: build_actor.rs  build_node.rs  from_actorid.rs  into_actorid.rs  lib.rs
kaantor-graph/: Cargo.toml
kaantor-graph/examples/: tree.rs
kaantor-graph/src/: graph.rs  lib.rs  node.rs  tree.rs
kaantor-traversals/: Cargo.toml
kaantor-traversals/examples/: flooding.rs
kaantor-traversals/src/: flooding.rs  lib.rs
kaantor/examples/: nexus.rs  ping_pong.rs
kaantor/src/: lib.rs  node.rs
kaantor/src/graph/: graph.rs  node.rs
kaantor/src/ids/: aid.rs  kid.rs  mod.rs  sid.rs
kaantor/src/nexus/: kernel.rs  message.rs  mod.rs
kaantor/src/nexus/graph/: actor.rs  message.rs  mod.rs
kaantor/src/nexus/proxies/: actor.rs  message.rs  mod.rs
kaantor/src/protocol/: message.rs  mod.rs  proxy.rs
kaantor_graph/: Cargo.toml
kaantor_graph/src/: tree.rs
src/Kaantor/: Actor.fs  Async.fs  Kaantor.fsproj  Kernel.fs  Library.fs  Logger.fs  Pinger.fs  Rebounder.fs  Types.fs  d.fsx
src/Kaantor/Graph/: Node.fs  NodeR.fs
tests/Scripts/: k.fsx  q.fsx
tests/Scripts/ML.NET/: ocr.fsx
tests/XUno/: XUno.fsproj
