[package]
name = "kaantor-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"

[dev-dependencies]
actix = { version = "0.13", default-features = false }
kaantor = { path = "../kaantor" }
