[package]
name = "kaantor-traversals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
env_logger = { workspace = true }
kaantor = { path = "../kaantor"}
kaantor-derive = { path =  "../kaantor-derive" }
log = { workspace = true }
